--- a/reactmodal/react-tutorial-master/package.json
+++ b/reactmodal/react-tutorial-master/package.json
@@ -9,7 +9,9 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "fs": "0.0.1-security",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "mongodb": "^2.2.10",
+    "multer": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
